# NextHackaton-WWCuteBoys

./: .gitignore  README.md  data.csv
.github/workflows/: deploy.yaml
BE/: Dockerfile  README.md  app.py  function.py  prompt_template.py  requirement.txt  search.py  test_api_fe.ipynb  testapi.ipynb  testapi.py
DEMO/: main.py  product_matching.py  style_matching.py  util.py
FE/: app.py
IMAGE_GENERATION/: test.py
INGESTION/: function.py  ingestion.py  pyproject.toml  requirement.txt  search.py  util.py
my-ecommerce-plugin/: Dockerfile  package-lock.json  package.json
my-ecommerce-plugin/public/data/: products.csv
my-ecommerce-plugin/src/components/: ProductPlugin.tsx
my-ecommerce-plugin/src/pages/: demo.tsx  index.tsx
my-ecommerce-plugin/src/utils/: matchingAPIs.tsx
notebook/: imageres.ipynb
terraform/: ecr.tf  main.tf  outputs.tf  variables.tf
utils/: lambda.py
